--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
         <input type="radio" name="filter" value="9x9" id="filter_9x9" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'FLIPr programs'])}}</label>
     <label for="filter_youtube" class="lbTypeLists">
         <input type="radio" name="filter" value="YoutubeSync" id="filter_youtube" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Youtube sync programs'])}}</label>
+    <label for="filter_youtubelive" class="lbTypeLists">
+        <input type="radio" name="filter" value="YoutubeLive" id="filter_youtubelive" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Youtube live programs'])}}</label>
 </p>
 {{/if}}
 </script>
@@ -399,7 +401,7 @@
 
 <!-- channel-list-tmpl-item Begin -->
 <script id="channel-list-tmpl-item" type="text/x-jquery-tmpl">
-<li id="program_${id}" class="clearfix chLi {{if true === isYoutubeSync}}ctypeYoutubeSync{{else}}ctype9x9{{/if}} {{if 'failed' === autoSync}}isFailedYoutubeSync{{else}}{{if true === readonly}}inSyncing{{/if}}{{/if}}" data-meta="${id}">
+<li id="program_${id}" class="clearfix chLi {{if true === isYoutubeSync}}ctypeYoutubeSync{{else contentType == 13}}ctypeYoutubeLive{{else}}ctype9x9{{/if}} {{if 'failed' === autoSync}}isFailedYoutubeSync{{else}}{{if true === readonly}}inSyncing{{/if}}{{/if}}" data-meta="${id}">
 <div class="container">
 <div class="container-right">
 <div class="container-bottom">
@@ -429,6 +431,9 @@
                          src="images/icon_youtube_sm.png">
                     <img title="{{if 4 === sorting}}{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sort by YouTube order'])}}{{else}}{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sort by YouTube reverse order'])}}{{/if}}"
                          src="images/icon_youtube_order_${sorting}.png">
+                {{else contentType == 13}}
+                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'YouTube Live program'])}}"
+                             src="images/icon_live_program_sm.png">
                 {{/if}}
                 {{if cms.global.USER_PRIV.isAutoOn === true && status === 0}}
                     <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'On program store'])}}"
@@ -441,12 +446,20 @@
                         {{if true === isYoutubeSync}}
                         <li><a class="sync" href="javascript:void(0);" data-meta="${id}">Sync<span class="tip"><img alt="" src="images/bg_tip_bottom.png"><span class="tip-left"><span class="tip-right"><span class="tip-middle">{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sync'])}}</span></span></span></span></a></li>
                         {{else}}
-                        <li><a href="epcurate-curation.html?cid=${id}" class="add">Add<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Curate a new episode'])}</span></span></span></span></a></li>
+                            {{if contentType == 13}}
+                            <li><a class="add disable">Add</a></li>
+                            {{else}}
+                            <li><a href="epcurate-curation.html?cid=${id}" class="add">Add<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Curate a new episode'])}</span></span></span></span></a></li>
+                            {{/if}}
                         {{/if}}
                         {{if !cms.global.IS_REMARK}}
                         <li><a href="channel-poi.html?id=${id}" class="channel-poi">Program POI<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Program POI'])}</span></span></span></span></a></li>
                         {{/if}}
+                        {{if contentType == 13}}
+                        <li><a class="detail disable">Detail</a></li>
+                        {{else}}
                         <li><a href="episode-list.html?id=${id}" class="detail">Detail<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Episode list'])}</span></span></span></span></a></li>
+                        {{/if}}
                         <li><a href="channel-setting.html?id=${id}" class="setting">Setting<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Program settings'])}</span></span></span></span></a></li>
                         <li><a href="/api/users/${$item.userId}/channels/${id}" rel="${id}" class="del">Del<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Delete this program'])}</span></span></span></span></a></li>
                         <li><a href="javascript:void(0);" class="url{{if 1 > cntEpisode && true !== isYoutubeSync}} disable{{/if}}">${nn._([cms.global.PAGE_ID, 'channel-list', 'Get URL'])}<span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'channel-list', 'Get URL'])}</span></span></span></span></a></li>
